2004-03-15  Johannes E. Schindelin  <Johannes.Schindelin@gmx.de>
	* fix libvncserver-config to again return a linker when
	  called with --link

2004-03-10  Karl Runge <runge@karlrunge.com>
	* x11vnc options -vncconnect, -connect, -remap,
	  -debug_pointer, and -debug_keyboard
	* support reverse connections, vncconnect(1), etc.
	* expt. with user supplied keysym remapping.
	* debug output option for pointer and keyboard.

2004-02-29  Johannes E. Schindelin  <Johannes.Schindelin@gmx.de>
	* fixed warning of valgrind for regiontest

2004-02-19  Karl Runge <runge@karlrunge.com>
	* x11vnc options -nosel -noprimary -visual.
	* add clipboard/selection handling.
	* add visual option (mostly for testing and workarounds).
	* improve shm cleanup on failures.

2004-02-04  Johannes E. Schindelin  <Johannes.Schindelin@gmx.de>
	* Make examples (at least a few) compileable with g++,
	  as pointed out by Juan Jose Costello

2004-01-30  Johannes E. Schindelin  <Johannes.Schindelin@gmx.de>
	* Thanks to Paul Fox from Bright Star Engineering,
	  a few more memory leaks were fixed.

2004-01-29  Johannes E. Schindelin  <Johannes.Schindelin@gmx.de>
	* Honour the check for libz and libjpeg again.

2004-01-21  Johannes E. Schindelin  <Johannes.Schindelin@gmx.de>
	* do not send unneccessary updates when drawing a cursor
	* ignore SIGPIPE; it is handled by EPIPE
	* add an example how to use rfbDoCopyRect
	* add experimental progressive updating (off by default)

2004-01-19  Karl Runge <runge@karlrunge.com>
	* handle mouse button number mismatch
	* improved pointer input handling during drags, etc.
	* somewhat faster copy_tiles() -> copy_tiles()
	* x11vnc options -buttonmap -old_pointer -old_copytile

2004-01-16  Johannes E. Schindelin  <Johannes.Schindelin@gmx.de>
	* compile fix for cygwin

2004-01-09  Karl Runge <runge@karlrunge.com>
	* x11vnc options -allow, -localhost, -nodragging, -input_skip
	* minimize memory usage under -nofb

2003-12-08  Karl Runge <runge@karlrunge.com>