@@ -1,6 +1,6 @@
 CFLAGS=-I.. -g -Wall
 
-noinst_PROGRAMS=tight-1
+noinst_PROGRAMS=tight-1 cargstest
 
 LDADD = ../libvncserver.a ../libvncclient/libvncclient.a
 
